新增：1、lock 锁客户端API 2、rpc调用请求/接收端； 修改：消息发送优化